--- a/SampleMultiview/Storyboard.storyboard
+++ b/SampleMultiview/Storyboard.storyboard
@@ -15,17 +15,24 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Choose a program" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="lxh-Ap-Cef">
-                                <rect key="frame" x="20" y="82" width="168" height="44"/>
+                                <rect key="frame" x="36" y="20" width="215" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="use an existing program" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="rtc-bV-t7a">
+                                <rect key="frame" x="51" y="105" width="185" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="q7A-pf-QXQ">
-                                <rect key="frame" x="357" y="157" width="123" height="37"/>
+                                <rect key="frame" x="51" y="65" width="185" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="New Program">
+                                <state key="normal" title="Create a new program">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -37,19 +44,19 @@
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="black" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="sGd-E2-7WB">
-                                <rect key="frame" x="20" y="157" width="247" height="443"/>
+                                <rect key="frame" x="0.0" y="157" width="540" height="443"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="detailDisclosureButton" indentationWidth="10" reuseIdentifier="programCell" textLabel="0rN-pf-4Ff" style="IBUITableViewCellStyleDefault" id="urN-9c-7OX" customClass="LoadProgramCell">
-                                        <rect key="frame" x="0.0" y="22" width="247" height="44"/>
+                                        <rect key="frame" x="0.0" y="22" width="540" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="214" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="507" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="0rN-pf-4Ff">
-                                                    <rect key="frame" x="10" y="0.0" width="194" height="43"/>
+                                                    <rect key="frame" x="10" y="0.0" width="487" height="43"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -63,6 +70,10 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="qKU-rU-YXb" id="xSn-0h-Ts8"/>
+                                    <outlet property="delegate" destination="qKU-rU-YXb" id="aMA-SZ-BlO"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -604,108 +615,6 @@
         <image name="clock44x44.png" width="44" height="44"/>
         <image name="weights44x44.png" width="44" height="44"/>
     </resources>
-    <classes>
-        <class className="CurrentViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CurrentViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="nextButtonPressed:"/>
-                <relationship kind="action" name="pauseButtonPressed:"/>
-                <relationship kind="action" name="startButtonPressed:"/>
-                <relationship kind="action" name="stopButtonPressed:"/>
-                <relationship kind="outlet" name="currentExerciseInTimer" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="currentRepsInTimer" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="currentTimeInTimer" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="currentView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="currentWeightInTimer" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="nextButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="nextExerciseLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="programTime" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="repsView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="timerPauseButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="timerStartButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="timerStopButton" candidateClass="UIButton"/>
-            </relationships>
-        </class>
-        <class className="ExerciseCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ExerciseCell.h"/>
-            <relationships>
-                <relationship kind="action" name="makeSuperSet:"/>
-                <relationship kind="action" name="unmakeSuperSet:"/>
-                <relationship kind="outlet" name="bodyPart" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="category" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="currentExerciseIndicator" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="editingMode" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="intensity" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="makeSuperSet" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="name" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="reps" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="repsImage" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="rest" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="time" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="unmakeSuperSet" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="weight" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="weightImage" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="ExercisePickerDelegate" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ExercisePickerDelegate.h"/>
-            <relationships>
-                <relationship kind="outlet" name="categoryButton" candidateClass="UISegmentedControl"/>
-                <relationship kind="outlet" name="exerciseComponentPicker" candidateClass="UIPickerView"/>
-            </relationships>
-        </class>
-        <class className="ExerciseTableDelegate" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ExerciseTableDelegate.h"/>
-        </class>
-        <class className="LoadProgramCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/LoadProgramCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="title" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="LoadProgramTableDelegate" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/LoadProgramTableDelegate.h"/>
-        </class>
-        <class className="LoadProgramViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/LoadProgramViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="newProgramChosen:"/>
-                <relationship kind="outlet" name="tableDelegate" candidateClass="LoadProgramTableDelegate"/>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="ProgramViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ProgramViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="addExercise:"/>
-                <relationship kind="action" name="addNewBodyPart:"/>
-                <relationship kind="action" name="addNewExerciseType:"/>
-                <relationship kind="action" name="closeProgramModalPressed:"/>
-                <relationship kind="action" name="hideKeyboard:"/>
-                <relationship kind="action" name="randomiseBodyPart:"/>
-                <relationship kind="action" name="randomiseExercise:"/>
-                <relationship kind="action" name="randomiseIntensity:"/>
-                <relationship kind="action" name="randomiseReps:"/>
-                <relationship kind="action" name="randomiseRest:"/>
-                <relationship kind="action" name="randomiseSets:"/>
-                <relationship kind="action" name="randomiseWeight:"/>
-                <relationship kind="action" name="weightOrTimeChosen:"/>
-                <relationship kind="outlet" name="addNewBodyPart" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="addNewExerciseType" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="categoryButton" candidateClass="UISegmentedControl"/>
-                <relationship kind="outlet" name="closeProgramModal" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="exerciseComponentPicker" candidateClass="UIPickerView"/>
-                <relationship kind="outlet" name="hideControlsButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="pickerDelegate" candidateClass="ExercisePickerDelegate"/>
-                <relationship kind="outlet" name="programControlsView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="programView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="showControlsButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="tableDelegate" candidateClass="ExerciseTableDelegate"/>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="weightOrTime" candidateClass="UISegmentedControl"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
