--- a/SampleMultiview/Storyboard.storyboard
+++ b/SampleMultiview/Storyboard.storyboard
@@ -160,7 +160,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" indicatorStyle="black" dataMode="prototypes" style="plain" allowsSelection="NO" rowHeight="95" sectionHeaderHeight="22" sectionFooterHeight="22" id="zK8-b6-PlJ" userLabel="Current Table View">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" indicatorStyle="black" dataMode="prototypes" style="plain" allowsSelection="NO" rowHeight="95" sectionHeaderHeight="22" sectionFooterHeight="22" id="zK8-b6-PlJ" userLabel="Current Set Table View">
                                 <rect key="frame" x="304" y="7" width="464" height="444"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -196,7 +196,7 @@
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" text="1" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" adjustsFontSizeToFit="NO" id="smx-Bz-KCS" userLabel="Reps">
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" text="1" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" adjustsFontSizeToFit="NO" id="smx-Bz-KCS" userLabel="Position">
                                                     <rect key="frame" x="0.0" y="15" width="64" height="64"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="40"/>
@@ -231,10 +231,6 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="ZI4-Ty-Ick" id="e7s-3Z-B9e"/>
-                                    <outlet property="delegate" destination="ZI4-Ty-Ick" id="R4t-Rg-bd1"/>
-                                </connections>
                             </tableView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="b6D-XQ-W9n" userLabel="Program Table View">
                                 <rect key="frame" x="0.0" y="476" width="768" height="388"/>
@@ -259,30 +255,76 @@
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="CurrentExerciseCell" rowHeight="170" id="2qb-4K-rkd" userLabel="Current Exercise" customClass="SummaryParentCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="CurrentExerciseCell" rowHeight="170" id="2qb-4K-rkd" userLabel="Current Exercise" customClass="CurrentExerciseCell">
                                         <rect key="frame" x="0.0" y="66" width="768" height="170"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="768" height="169"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Exercise" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="oAa-ig-uSc" userLabel="Name">
-                                                    <rect key="frame" x="20" y="20" width="151" height="129"/>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" text="80kg" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" adjustsFontSizeToFit="NO" id="q10-ET-EeC" userLabel="Rest">
+                                                    <rect key="frame" x="92" y="53" width="74" height="64"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="backgroundColor" red="0.62745100259999997" green="0.74901962280000001" blue="0.89411771299999998" alpha="1" colorSpace="deviceRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Sets 3" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="Yc5-yC-YUB" userLabel="Sets">
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" text="60s" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" adjustsFontSizeToFit="NO" id="a0g-wG-aq3" userLabel="Weight">
+                                                    <rect key="frame" x="174" y="53" width="64" height="64"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="backgroundColor" red="0.68055791440000002" green="0.01637291917" blue="0.0083494394269999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Sets 3" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="Yc5-yC-YUB" userLabel="Reps">
                                                     <rect key="frame" x="526" y="11" width="64" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="AwI-tQ-xzb">
+                                                    <rect key="frame" x="707" y="53" width="61" height="64"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                    <state key="normal" image="Actions-dialog-ok-apply-icon.png">
+                                                        <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <state key="highlighted">
+                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="setCompletedPressed:" destination="ZI4-Ty-Ick" eventType="touchUpInside" id="JUE-XM-xig"/>
+                                                    </connections>
+                                                </button>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Exercise" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="oAa-ig-uSc" userLabel="Name">
+                                                    <rect key="frame" x="502" y="58" width="95" height="53"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" text="1" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" adjustsFontSizeToFit="NO" id="d8l-YD-vDS" userLabel="Position">
+                                                    <rect key="frame" x="20" y="53" width="63" height="64"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
+                                        <connections>
+                                            <outlet property="name" destination="oAa-ig-uSc" id="6ve-Ey-7Kr"/>
+                                            <outlet property="position" destination="d8l-YD-vDS" id="tag-Rt-B6H"/>
+                                            <outlet property="reps" destination="Yc5-yC-YUB" id="r4L-AC-78v"/>
+                                            <outlet property="rest" destination="q10-ET-EeC" id="62R-od-W13"/>
+                                            <outlet property="sets" destination="Yc5-yC-YUB" id="pwd-Xr-dae"/>
+                                            <outlet property="weight" destination="a0g-wG-aq3" id="i7P-co-WaN"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="NextExerciseCell" id="6F5-Gn-bh7" userLabel="Child Cell" customClass="SummaryChildCell">
                                         <rect key="frame" x="0.0" y="236" width="768" height="44"/>
@@ -304,6 +346,10 @@
                                     </tableViewCell>
                                 </prototypes>
                                 <sections/>
+                                <connections>
+                                    <outlet property="dataSource" destination="ZI4-Ty-Ick" id="vJR-ar-2R5"/>
+                                    <outlet property="delegate" destination="ZI4-Ty-Ick" id="Mhz-cm-M9n"/>
+                                </connections>
                             </tableView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Exercise" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="w0G-A1-4ei">
                                 <rect key="frame" x="6" y="114" width="290" height="105"/>
@@ -318,7 +364,8 @@
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                     <connections>
                         <outlet property="currentExerciseInTimer" destination="w0G-A1-4ei" id="NcZ-w3-3hk"/>
-                        <outlet property="tableView" destination="zK8-b6-PlJ" id="Hhe-Bn-YcN"/>
+                        <outlet property="currentExerciseTableView" destination="zK8-b6-PlJ" id="PUI-Bp-ZBL"/>
+                        <outlet property="programTableView" destination="b6D-XQ-W9n" id="ATh-hB-9EG"/>
                     </connections>
                 </viewController>
             </objects>
@@ -574,6 +621,18 @@
         <image name="weights44x44.png" width="44" height="44"/>
     </resources>
     <classes>
+        <class className="CurrentExerciseCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CurrentExerciseCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="currentExerciseIndicator" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="name" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="position" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="reps" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="rest" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="sets" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="weight" candidateClass="UILabel"/>
+            </relationships>
+        </class>
         <class className="CurrentSetCell" superclassName="UITableViewCell">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/CurrentSetCell.h"/>
             <relationships>
@@ -593,15 +652,16 @@
                 <relationship kind="action" name="startButtonPressed:"/>
                 <relationship kind="action" name="stopButtonPressed:"/>
                 <relationship kind="outlet" name="currentExerciseInTimer" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="currentExerciseTableView" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="currentRepsInTimer" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="currentTimeInTimer" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="currentView" candidateClass="UIView"/>
                 <relationship kind="outlet" name="currentWeightInTimer" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="nextButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="nextExerciseLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="programTableView" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="programTime" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="repsView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="timerPauseButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="timerStartButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="timerStopButton" candidateClass="UIButton"/>
@@ -676,18 +736,6 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SummaryChildCell.h"/>
             <relationships>
                 <relationship kind="outlet" name="reps" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="weight" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="SummaryParentCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SummaryParentCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="currentExerciseIndicator" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="name" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="reps" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="rest" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="sets" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="time" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="weight" candidateClass="UILabel"/>
             </relationships>
         </class>
